# openkona

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  ROADMAP.md  pyproject.toml  run_stage_two.py  sitecustomize.py  stage2_training_data.json
.github/workflows/: ci.yml
assets/: logo-animated.html
docs/: SLEEP_WAKE_TESTING.md  verification-matrix.md
eval_results/: q4_glm45air_trace.txt  q4_manual_trace.md
glm_test_results/: stage1_results.json  stage2_results.json  stage3_results.json  stage4_results.json
konash/: __init__.py  agent.py  api.py  auth.py  benchmarks.py  cli.py  cloud.py  corpus.py  download.py  models.py
konash/corpora/: policies.py
konash/eval/: ablations.py  benchmarks.py  entrypoint.py  experiments.py  harness.py  metrics.py  nuggets.py  runner.py  stats.py  ttc.py
konash/harness/: dispatcher.py  environment.py  runtime.py  strategy.py
konash/indexes/: financebench_qwen3_0.6b.npz
konash/inference/: aggregation.py  config.py  local.py  parallel.py  value_model.py  value_search.py
konash/plugins/: base.py  compression.py  control.py
konash/prompts/: registry.py
konash/retrieval/: bm25.py  vector_search.py
konash/rewards/: __init__.py  base.py  nugget.py  tasks.py
konash/sky/: train.yaml
konash/synthesis/: config.py  dedup.py  filters.py  pipeline.py  qa.py  rollouts.py
konash/training/: backends.py  checkpoint.py  dataset.py  events.py  execution.py  iteration.py  logger.py  multitask.py  oapl.py  project_state.py  resume.py  segmentation.py  stats.py  unsloth_engine.py
notebooks/: trivia_night.ipynb
scripts/: embed_financebench_pages.py  eval_financebench.py  eval_freshstack.py  eval_qampari.py  eval_synthesis.py  financebench_eval_reference.md  launch_financebench_qwen_smoke.py  mock_trainer_live.py  qampari_reembed_guide.md  run_stage_one.py  run_stage_two.py  setup_cluster.sh  shadeform_eval_guide.md  test_bcp_e2e.py  test_glm_stages.py  train_oapl_unsloth.py
tests/: conftest.py  test_api_integration.py  test_arena_app.py  test_backends.py  test_behavioral.py  test_benchmarks.py  test_cloud_runtime.py  test_corpus.py  test_dedup.py  test_environment_runtime.py  test_eval_args.py  test_eval_provider.py  test_faiss_vector_search.py  test_oapl_math.py  test_package_metadata.py  test_pass_rate_filter.py  test_project_state.py  test_rewards_runtime.py  test_training_execution.py  test_training_live_service.py  test_training_logger.py  test_training_monitor.py  test_vgs_bfs.py  test_vgs_integration.py
tests/specs/: test_00_architecture_contracts.py  test_01_synthesis_contracts.py  test_02_training_contracts.py  test_03_inference_contracts.py  test_04_evaluation_contracts.py  test_05_behavioral_contracts.py  (+18 more)
tools/: __init__.py  server.py
(+13 files in other folders)
