[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openkona"
version = "0.1.0"
description = "Train knowledge agents that search, retrieve, compress, and reason — on a single GPU."
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
konash = "konash.cli:main"

[tool.pytest.ini_options]
minversion = "7.4"
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["."]
