[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "konash"
version = "0.1.4"
description = "Train knowledge agents that search, retrieve, compress, and reason — on a single GPU."
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]
train = [
    "torch>=2.1",
    "transformers>=4.36",
    "peft>=0.7",
    "accelerate>=0.25",
    "bitsandbytes>=0.46.1",
]
quant = [
    "bitsandbytes>=0.41",
]
all = [
    "torch>=2.1",
    "transformers>=4.36",
    "peft>=0.7",
    "accelerate>=0.25",
    "bitsandbytes>=0.41",
]

[project.scripts]
konash = "konash.cli:main"

[tool.setuptools.packages.find]
include = ["konash*"]

[tool.pytest.ini_options]
minversion = "7.4"
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["."]
