[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "konash"
version = "0.1.0"
description = "Train knowledge agents that search, retrieve, compress, and reason."
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "rich>=13.0",
    "together>=2.0",
    "google-genai>=1.0",
    "skypilot-nightly[runpod,lambda,aws,gcp]",
    "datasets>=2.14",
    "huggingface_hub>=0.20",
    "sentence-transformers>=2.2",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]
train = [
    "torch>=2.1",
    "transformers>=4.36",
    "peft>=0.7",
    "accelerate>=0.25",
    "bitsandbytes>=0.46.1",
]
unsloth = [
    "unsloth",
    "peft>=0.7",
    "together>=2.0",
]
search = [
    "faiss-cpu>=1.7",
]
quant = [
    "bitsandbytes>=0.41",
]
all = [
    "torch>=2.1",
    "transformers>=4.36",
    "peft>=0.7",
    "accelerate>=0.25",
    "bitsandbytes>=0.41",
    "faiss-cpu>=1.7",
    "unsloth",
    "together>=2.0",
]

[project.scripts]
konash = "konash.cli:main"

[tool.setuptools.packages.find]
include = ["konash*"]

[tool.setuptools.package-data]
konash = ["sky/*.yaml", "indexes/*.npz"]

[tool.pytest.ini_options]
minversion = "7.4"
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["."]
